@@ -58,6 +58,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 26285) Extensions will be automatically generated on upload if the user
   specified a filename without extension.
 * (bug 26851) Special:UserRights now allows to prefill the reason field
+* New maintenance script to fix double redirects (maintenance/fixDoubleRedirects.php)
 
 === Bug fixes in 1.18 ===
 * (bug 23119) WikiError class and subclasses are now marked as deprecated
